dashboard-ingress/default-http-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
spec:
  selector:
    app: default-response-app
  type: ClusterIP
  ports:
  - nodePort: 30155
    port: 80
    protocol: TCP
    targetPort: 8080
